# NHS3152_NFC

ufr-examples-python-port_open/: ErrorCodes.py  port_open_ex.py
ufr-mf-examples-python/: README.md
ufr-mf-examples-python/ufadvanced/: BlockInSectorReadWrite.py  BlockInSectorReadWriteForm.py  BlockReadWrite.py  BlockReadWriteForm.py  Constants.py  Functions.py  LinearFormatCard.py  LinearFormatCardForm.py  LinearReadWrite.py  LinearReadWriteForm.py  SectorTrailerWrite.py  SectorTrailerWriteForm.py  ValueBlockInSectorIncrDecr.py  ValueBlockInSectorIncrDecrForm.py  ValueBlockInSectorReadWrite.py  ValueBlockInSectorReadWriteForm.py  ValueBlockIncrDecr.py  ValueBlockIncrDecrForm.py  ValueBlockReadWrite.py  ValueBlockReadWriteForm.py  ViewAll.py  ViewAllForm.py  uFCoderAdvanced.py  uFrAdvancedForm.py
ufr-mf-examples-python/ufr_py_test/: ufr_poll_BlockRead.py  ufr_poll_LinRead.py
ufr-mf-examples-python/ufsimple/: Constants.py  uFCoderSimple.py  uFSimpleForm.py  uFSimpleForm.ui
ufr-mf-examples-python/ufsimple_copy/: 10mm_20k_2mm.txt  10mm_20k_3mm.txt  10mm_20k_4mm.txt  10mm_20k_5mm.txt  10mm_20k_6mm.txt  10mm_20k_7mm.txt  10mm_20k_8mm.txt  10mm_20k_9mm.txt  10mm_20k_9mm_1.txt  12mm_20k_2mm.txt  12mm_20k_3mm.txt  12mm_20k_4mm.txt  12mm_20k_5mm.txt  12mm_20k_6mm.txt  12mm_20k_7mm.txt  12mm_20k_8mm.txt  12mm_20k_9mm.txt  14mm_20k_2mm.txt  14mm_20k_3mm.txt  14mm_20k_4mm.txt  14mm_20k_5mm.txt  14mm_20k_6mm.txt  14mm_20k_7mm.txt  14mm_20k_8mm.txt  14mm_20k_9mm.txt  16mm_20k_2mm.txt  16mm_20k_3mm.txt  (+128 more)
ufr-mf-examples-python/ufsimplest_1/ufr-lib/esp32/: CMakeLists.txt
(+69 files in other folders)
